--- a/AWS-Terraform/Project-2/.github/workflows/terraform.yml
+++ b/AWS-Terraform/Project-2/.github/workflows/terraform.yml
@@ -8,7 +8,7 @@ on:
 Jobs:
   terraform:
     name: "Terraform"
-    runds-on ubuntu-latest
+    runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrests.AWS_SECRET_ACCESS_KEY}}
