--- a/AWS-Terraform/Project-2/.github/workflows/terraform.yml
+++ b/AWS-Terraform/Project-2/.github/workflows/terraform.yml
@@ -5,13 +5,13 @@ on:
     branches:
       -main
 
-Jobs:
+jobs:
   terraform:
     name: "Terraform"
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrests.AWS_SECRET_ACCESS_KEY}}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
     defaults:
       run:
         working-directory: Project-2
