--- a/.github/workflows/ci-terraform.yml
+++ b/.github/workflows/ci-terraform.yml
@@ -30,8 +30,8 @@ jobs:
         run: terraform validate
 
       # Step 4: Plan (optional safeguard before apply)
-      - name: Terraform Plan
-        run: terraform plan -out=tfplan
+      #- name: Terraform Plan
+      #  run: terraform plan -out=tfplan
 
       # Step 5: Apply (only on push to main, not PRs)
       # github.ref → is a built-in GitHub Actions context variable. 
