tfplan removed from apply as no plan section

--- a/.github/workflows/ci-terraform.yml
+++ b/.github/workflows/ci-terraform.yml
@@ -38,4 +38,4 @@ jobs:
       # It gives the full Git ref that triggered the workflow
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main'
-        run: terraform apply -auto-approve tfplan
+        run: terraform apply -auto-approve
