--- a/.github/workflows/ci-terraform.yml
+++ b/.github/workflows/ci-terraform.yml
@@ -19,19 +19,23 @@ jobs:
 
       # Step 1: Terraform fmt check
       - name: Terraform Format Check
-        run: terraform fmt 
+        run: terraform fmt
+        working-directory: AWS-Terraform/Project-3-Github-Actions/
 
       # Step 2: Initialize Terraform
       - name: Terraform Init
         run: terraform init
+        working-directory: AWS-Terraform/Project-3-Github-Actions/
 
       # Step 3: Validate Terraform
       - name: Terraform Validate
         run: terraform validate
+        working-directory: AWS-Terraform/Project-3-Github-Actions/
 
       # Step 4: Plan (optional safeguard before apply)
       - name: Terraform Plan
         run: terraform plan -out=tfplan
+        working-directory: AWS-Terraform/Project-3-Github-Actions/
 
       # Step 5: Apply (only on push to main, not PRs)
       # github.ref → is a built-in GitHub Actions context variable. 
@@ -39,3 +43,4 @@ jobs:
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main'
         run: terraform apply -auto-approve tfplan
+        working-directory: AWS-Terraform/Project-3-Github-Actions/
