--- a/.github/workflows/ci-terraform.yml
+++ b/.github/workflows/ci-terraform.yml
@@ -44,3 +44,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: terraform apply -auto-approve 
         working-directory: AWS-Terraform/Project-3-Github-Actions/main/
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: us-east-1
