--- a/.github/workflows/ci-build-terraform.yml
+++ b/.github/workflows/ci-build-terraform.yml
@@ -1,10 +1,11 @@
 name: Terraform CI Pipeline
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:   # allows you to trigger manually
+  #push:
+  #  branches: [ "main" ]
+  #pull_request:
+  #  branches: [ "main" ]
 
 jobs:
   terraform:
