--- a/.github/workflows/ci-destroy-terraform.yml
+++ b/.github/workflows/ci-destroy-terraform.yml
@@ -14,14 +14,27 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
 
-      # Init - change to work-directory to the infra you are removing
+      # Init with backend (this will connect to S3 + DynamoDB)
       - name: Terraform Init
-        run: terraform init
+        run: terraform init -input=false
         working-directory: AWS-Terraform/Project-4-Destroy-GitHubAction-Build/main
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: us-east-1
 
-      # Destroy - change to work-directory to the infra you are removing
+      # Double check state (debug step, optional)
+      - name: Terraform State List
+        run: terraform state list || echo "No resources found in state"
+        working-directory: AWS-Terraform/Project-4-Destroy-GitHubAction-Build/main
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: us-east-1
+
+      # Destroy using remote state
       - name: Terraform Destroy
-        run: terraform destroy -auto-approve
+        run: terraform destroy -auto-approve -input=false
         working-directory: AWS-Terraform/Project-4-Destroy-GitHubAction-Build/main
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
