--- a/.github/workflows/2-ci-build-prod-terraform.yml
+++ b/.github/workflows/2-ci-build-prod-terraform.yml
@@ -1,4 +1,4 @@
-name: Terraform CI Pipeline
+name: 2. Terraform CI Pipeline Production
 # Step 2 which builds the production infrastructure in main.tf
 on:
   workflow_dispatch:   # allows you to trigger manually
