--- a/.github/workflows/3-ci-destroy-prod-terraform.yml
+++ b/.github/workflows/3-ci-destroy-prod-terraform.yml
@@ -1,4 +1,4 @@
-name: Terraform Destroy Pipeline
+name: 3. Terraform Destroy Pipeline Production
 # Step 3 which destroys the production infrastructure in main.tf
 on:
   workflow_dispatch:   # allows you to trigger manually
