--- a/.github/workflows/5-bootstrap-destroy.yml
+++ b/.github/workflows/5-bootstrap-destroy.yml
@@ -19,11 +19,11 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: bootstrap-tfstate
-          path: AWS-Terraform/bootstrap/
+          path: AWS-Terraform/Project-5-Production-GitHubAction-Build/bootstrap-backend/
 
       - name: Terraform Init
         run: terraform init -input=false
-        working-directory: AWS-Terraform/bootstrap
+        working-directory: AWS-Terraform/Project-5-Production-GitHubAction-Build/bootstrap-backend
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -31,8 +31,9 @@ jobs:
 
       - name: Terraform Destroy
         run: terraform destroy -auto-approve -input=false
-        working-directory: AWS-Terraform/bootstrap
+        working-directory: AWS-Terraform/Project-5-Production-GitHubAction-Build/bootstrap-backend
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: us-east-1
+
